...

  return (
    <View style={[styles.fullContainer, dynamicStyles.fullContainer]}>
      <TopNavBar />
      <ScrollView style={styles.scrollViewContent}>
        <Text style={[styles.aiAgentTitle, dynamicStyles.aiAgentTitle]}>
          Property AI Agent
        </Text>
        <Text
          style={[styles.aiAgentDescription, dynamicStyles.aiAgentDescription]}
        >
          Upload property documents and chat with AI to get insights or
          diagnostics of your properties and assets
        </Text>
        <AddPropertyCard
          onPress={() =>
            Alert.alert(
              "Add New Property",
              "This functionality will be implemented soon!"
            )
          }
          style={dynamicStyles.addPropertyCardStyle}
        />

...
